# coloforma

./: .gitignore  CMakeLists.txt  LICENSE  README.md  colours.hpp  main.cpp  println.hpp
src/: Println.hpp
